syntax = "proto3";

package rivet.backend.pkg.cloud.game_config_create;

import "proto/common.proto";

message Request {
	rivet.common.Uuid game_id = 1;
}

message Response {

}
